# wisper-transcribe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  plan.md  pyproject.toml  setup.ps1  setup.sh  start.bat  start.command  start.sh  tailwind.config.js
.claude/: settings.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  docker.yml
discord-bot/: build.gradle
discord-bot/src/main/java/com/wisper/discord/: Main.java  SocketWriter.java  UserAudioDispatcher.java
docs/: cli-reference.md  configuration.md  docker.md  scenarios.md  setup.md  web-ui.md
handoff/: README.md  prototype-standalone.html  prototype.html  prototype.jsx
handoff/screens/: codex.jsx  shared-data.jsx  studio-campaigns.jsx  studio-record.jsx  studio-recordings.jsx  studio-transcripts-list.jsx  studio.jsx  studio2.jsx
scripts/: spike_voice_receive.py  vendor.py
scripts/jda-spike/: .gitignore  build.gradle  settings.gradle
scripts/jda-spike/src/main/java/wisper/: JdaSpike.java
src/wisper_transcribe/: _noise_suppress.py  aligner.py  audio_utils.py  campaign_manager.py  cli.py  config.py  debug_log.py  diarizer.py  formatter.py  journal.py  models.py  path_utils.py  pipeline.py  recording_manager.py  refine.py  speaker_manager.py  summarize.py  time_utils.py  transcriber.py
src/wisper_transcribe/llm/: __init__.py  anthropic.py  base.py  errors.py  google.py  lmstudio.py  ollama.py  ollama_cloud.py  openai.py
src/wisper_transcribe/static/: app.js  htmx.min.js  input.css  tailwind.min.css
src/wisper_transcribe/web/: __init__.py  _responses.py  app.py  audio_writer.py  discord_bot.py  enroll_shared.py  jobs.py
src/wisper_transcribe/web/routes/: __init__.py  campaigns.py  config.py  dashboard.py  record.py  speakers.py  transcribe.py  transcripts.py
src/wisper_transcribe/web/templates/: base.html  campaign_journal.html  campaigns.html  config.html  index.html  job_detail.html  record.html  recording_detail.html  recordings.html  speaker_enroll.html  speaker_enroll_standalone.html  speakers.html  summary_detail.html  transcribe.html  transcript_detail.html  transcript_edit.html  transcripts.html
src/wisper_transcribe/web/templates/partials/: icons.html  job_rows.html  recent_transcripts.html  sidebar.html  sidebar_status.html
tests/: _discord_fakes.py  conftest.py  test_aligner.py  test_audio_utils.py  test_audio_writer.py  test_campaign_manager.py  test_cli.py  test_config.py  test_debug_log.py  test_debug_tqdm.py  test_diarizer.py  test_discord_bot.py  test_formatter.py  test_journal.py  test_llm_clients.py  test_lmstudio_client.py  test_models.py  test_noise_suppress.py  test_owasp.py  test_path_traversal.py  test_path_utils.py  test_pipeline.py  test_pipeline_folder.py  test_record_cli.py  test_record_routes.py  test_recording_manager.py  test_refine.py  test_speaker_manager.py  test_summarize.py  test_time_utils.py  test_transcriber.py  test_transcript_edit.py  test_transcript_enroll.py  test_web_jobs.py  test_web_routes.py
