[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisper-transcribe"
version = "0.1.0"
description = "Podcast transcription with speaker diarization for tabletop RPG actual-play recordings"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "pyannote-audio>=4.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "click>=8.1",
    "platformdirs>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
    "pydub>=0.25",
    "audioop-lts>=0.2; python_version >= '3.13'",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "nvidia-cublas-cu12; sys_platform == 'win32'",
    "nvidia-cudnn-cu12; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest-cov"]

[project.scripts]
wisper = "wisper_transcribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # speechbrain 1.0 deprecated-redirect noise (k2, transformers, spacy, numba, pretrained)
    "ignore:Module 'speechbrain.*' was deprecated:UserWarning",
    # torchcodec can't load FFmpeg shared DLLs until Gyan.FFmpeg.Shared is installed
    "ignore::UserWarning:pyannote.audio.core.io",
    # matplotlib 3.7 colormap API change (triggered by pyannote.core.notebook)
    "ignore:The get_cmap function was deprecated:matplotlib.MatplotlibDeprecationWarning",
    # pydub uses audioop which is removed in Python 3.13
    "ignore:'audioop' is deprecated:DeprecationWarning",
    # SWIG-generated types (onnxruntime / faster-whisper) have no __module__
    "ignore:builtin type .* has no __module__:DeprecationWarning",
]

[tool.coverage.run]
source = ["wisper_transcribe"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
