[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisper-transcribe"
version = "0.1.0"
description = "Podcast transcription with speaker diarization for tabletop RPG actual-play recordings"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "pyannote-audio>=4.0",
    "omegaconf>=2.3",        # undeclared transitive dep of pyannote-audio; required at import time
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "click>=8.1",
    "platformdirs>=4.0",
    "numpy>=2.2.6",
    "scipy>=1.10",
    "tqdm>=4.65",
    "pydub>=0.25.1",
    "audioop-lts>=0.2; python_version >= '3.13'",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "nvidia-cublas-cu12; sys_platform == 'win32'",
    "nvidia-cudnn-cu12; sys_platform == 'win32'",
    "mlx-whisper; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Web UI (Phase 11)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.26",
    "jinja2>=3.1",
    "markdown>=3.5",
    "pytailwindcss>=0.3",  # Tailwind CSS build tool (wraps standalone binary, no Node.js)
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "httpx>=0.28.1",         # async HTTP client for SSE streaming tests
    "isort",
]
macos = [
    "mlx-whisper",         # Apple Silicon GPU/ANE Whisper backend (macOS only)
]
# LLM post-processing (wisper refine / wisper summarize). All opt-in; core
# install stays ML-only. Ollama uses httpx (already a runtime-adjacent dep
# via uvicorn/FastAPI) so no extra package is required for local use.
llm-anthropic = [
    "anthropic>=0.39.0",
]
llm-openai = [
    "openai>=1.50.0",
]
llm-google = [
    "google-genai>=0.3.0",
]
llm-all = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
]

[project.scripts]
wisper = "wisper_transcribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (skipped unless WISPER_SLOW_TESTS=1 is set)",
]
filterwarnings = [
    # speechbrain 1.0 deprecated-redirect noise (k2, transformers, spacy, numba, pretrained)
    "ignore:Module 'speechbrain.*' was deprecated:UserWarning",
    # torchcodec can't load FFmpeg shared DLLs until Gyan.FFmpeg.Shared is installed
    "ignore::UserWarning:pyannote.audio.core.io",
    # matplotlib 3.7 colormap API change (triggered by pyannote.core.notebook)
    "ignore:The get_cmap function was deprecated:matplotlib.MatplotlibDeprecationWarning",
    # pydub uses audioop which is removed in Python 3.13
    "ignore:'audioop' is deprecated:DeprecationWarning",
    # SWIG-generated types (onnxruntime / faster-whisper) have no __module__
    "ignore:builtin type .* has no __module__:DeprecationWarning",
]

[tool.coverage.run]
source = ["wisper_transcribe"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
